# IFJ17-compiler

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: LL_Table.ods  dokumentace.docx  grammar.tex
doc/dokumentace/: Makefile  dokumentace.tex
doc/dokumentace/images/: fit-logo.eps  ll-table.eps  prec-table.eps  scanner.eps
doc/dokumentace/src/: dokumentace.docx  ll-table.ods  prec-table.ods
doc/parser/: Makefile  expr_grammar.tex  ll_grammar.tex  ll_table.ods  ll_table.xlsx  precedence_table.ods  precedence_table.xlsx
doc/scanner/: CHANGELOG.txt  scanner.tex
src/: 3ac.c  3ac.h  Makefile  buffer.c  buffer.h  debug.c  debug.h  dllist.c  dllist.h  error_code.h  expr_grammar.c  expr_grammar.h  expr_parser.c  expr_parser.h  ext_stack.c  ext_stack.h  fsm.h  grammar.c  grammar.h  list.c  list.h  main.c  memory_manager.c  memory_manager.h  parser.c  parser.h  rozdeleni  rozsireni  scanner.c  scanner.h  sem_analyzer.c  sem_analyzer.h  sparse_table.c  sparse_table.h  stack.c  stack.h  superrandom.c  superrandom.h  symtable.c  symtable.h  (+4 more)
test/: buffer.cpp  dllist.cpp  expr_parser.cpp  ext_stack.cpp  list.cpp  memory_manager.cpp  parser.cpp  scanner.cpp  sparse_table.cpp  stack.cpp  symtable.cpp  test.cpp
test/test_files/: factorial_it.fbc  factorial_recur.fbc  lex_err_base_01.fbc  lex_err_base_02.fbc  lex_err_base_03.fbc  lex_err_base_04.fbc  lex_err_block_comment_01.fbc  lex_err_block_comment_02.fbc  lex_err_real_04.fbc  lex_err_real_05.fbc  lex_err_string_01.fbc  lex_err_string_02.fbc  lex_err_string_06.fbc  parse_int.fbc  parse_real.fbc  parse_string.fbc  simple01.fbc  simple_expr_01.fbc  strings.fbc  strings2.fbc
test/test_files/expressions/: 01.test  02.test  03.test  04.test  05.test  06.test  07.test
test/test_files/scanner/: empty_string.fbc  lex_err_real_01.fbc  lex_err_real_02.fbc  lex_err_real_03.fbc  lex_err_string_03.fbc  lex_err_string_04.fbc  lex_err_string_05.fbc  lex_err_unknown_char.fbc
tools/example_codes/: asc_test.code  chr_test.code  factorial_it.code  factorial_recur.code  length_test.code  strings.code  substr_test.code  test_01.code  test_lenght.code
(+26 files in other folders)
